--- a/sensor_style.css
+++ b/sensor_style.css
@@ -2,6 +2,10 @@ body {
 	font-family: Arial, sans-serif;
 	text-align: center;
 }
-#data {
-	margin-top: 20px;
+.room_one {
+	margin: 20px 0 0 0;
+}
+#kitchen_text {
+	margin-bottom: 50px;
+	font-size: 25px;
 }
