--- a/sensor_client.css
+++ b/sensor_client.css
@@ -256,6 +256,38 @@ img {
 	text-align: left;
 	color: #2b2b2b;
 }
+.graph {
+	margin-top: 24px;
+	display: flex;
+	flex-direction: row;
+	gap: 24px;
+}
+.sensor_1 {
+	width: 360px;
+	height: 206px;
+	/*padding: 24px 28px 15px 19px;*/
+	border-radius: 16px;
+	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+	background-color: #fff;
+}
+.sensor_1_text {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.sensor_2 {
+	width: 360px;
+	height: 206px;
+	/*padding: 24px 28px 15px 19px;*/
+	border-radius: 16px;
+	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+	background-color: #fff;
+}
+.sensor_2_text {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
 .device {
 	display: flex;
 	flex-direction: column;
