5st почти готовая черновая сборка

--- a/sensor_client.css
+++ b/sensor_client.css
@@ -308,6 +308,51 @@ img {
 	display: flex;
 	flex-direction: row;
 }
+
+.device_sensor input[type="checkbox"] {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+.device_sensor label {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 40px;
+	height: 20px;
+	background: grey;
+	display: block;
+	position: relative;
+	margin: 2px 0 2px 52px;
+	border-radius: 10px;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+}
+
+.device_sensor label:after {
+	content: "";
+	position: absolute;
+	top: 2.75px;
+	left: 5px;
+	width: 16px;
+	height: 16px;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+.device_sensor input:checked + label {
+	background: #bada55;
+}
+
+.device_sensor input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+.device_sensor label:active:after {
+	width: 20px;
+}
+
 .air_conditioner {
 	width: 168px;
 	height: 177px;
@@ -391,4 +436,52 @@ img {
 	flex-grow: 0;
 	transform: rotate(0deg);
 	background-color: #bcb5b5;
+}
+.end_body {
+	margin: 28px 42px 0 37px;
+}
+.info_bar {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 34px;
+}
+.info_bar a {
+	width: 40px;
+	height: 40px;
+	margin: 0 24px;
+	padding: 8px;
+	border-radius: 8px;
+	border: solid 1px #4b65a2;
+}
+.members_list {
+	height: 352px;
+	padding: 32px 20px 40px 24px;
+	border-radius: 24px;
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+	background-color: #fff;
+}
+.members_tag {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.members_tag a {
+	font-family: Chivo;
+	font-size: 20px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: left;
+	color: #3c80f7;
+}
+.add_member a {
+	width: 220px;
+	height: 56px;
+	flex-grow: 0;
+	margin: 32px 0 0;
+	padding: 16px 49px;
+	border-radius: 55px;
+	background-color: #ccdbfd;
 }
