--- a/sensor_client.css
+++ b/sensor_client.css
@@ -271,32 +271,29 @@ img {
 	flex-direction: row;
 	gap: 24px;
 }
-.sensor_1 {
+
+.sensor {
 	width: 360px;
 	height: 206px;
-	/*padding: 24px 28px 15px 19px;*/
 	border-radius: 16px;
+	padding: 20px;
 	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
 	background-color: #fff;
 }
-.sensor_1_text {
+.sensor_text {
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
 }
-.sensor_2 {
-	width: 360px;
-	height: 206px;
-	/*padding: 24px 28px 15px 19px;*/
-	border-radius: 16px;
-	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
-	background-color: #fff;
+.sensor_text > p {
+	font-weight: 700;
+	font-size: 20px;
+	margin-bottom: 16px;
 }
-.sensor_2_text {
-	display: flex;
-	flex-direction: row;
-	gap: 20px;
+.sensor_values {
+	margin-bottom: 8px;
 }
+
 .device {
 	display: flex;
 	flex-direction: column;
